python-scripts/CloudFormation/MyVPC_Stack.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "igw52abe436": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyVPCInternetGateway"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "10449bda-6c6a-494e-afc3-064c96e48004"
        }
      }
    },
    "doptf477e790": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "eu-west-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "23d8e41d-79a6-4272-8986-7ee6685ed2d2"
        }
      }
    },
    "acl0f176568": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "5411a6bf-151a-4fd8-b3bf-713d3ae50308"
        }
      }
    },
    "MyWebServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": {
          "Ref": "AMIId"
        },
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyWebServer"
          }
        ],
        "SubnetId": {
          "Ref": "MyPublicSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "92bd4d15-4b2c-41a0-8683-1d228cb0a0de"
        }
      }
    },
    "MySQLServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": {
          "Ref": "AMIId"
        },
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyMYSQLServer"
          }
        ],
        "SubnetId": {
          "Ref": "MyPrivateSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "3e0dc8eb-a992-44e0-b43c-70ad5e1ddff4"
        }
      }
    },
    "MyNatInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": {
          "Ref": "NATAMIID"
        },
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyNATInstance"
          }
        ],
        "SubnetId": {
          "Ref": "MyPublicSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "69ac6a18-674a-459e-a297-b54110891c15"
        }
      }
    },
    "MyDMZ_SG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "launch-wizard-2 created 2017-06-30T09:00:40.952+02:00",
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyDMZ_SG"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "b4f97ca5-7086-4460-add8-ba82b620cc93"
        }
      }
    },
    "sgMyMySQLSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "MyMySQL_SG",
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyMySQL_SG"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "3c97bfbc-57f6-4dd9-90f9-8adbc8aeefbb"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0f176568"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "34289ee1-50d1-488b-9f3b-c85fbe58bf52"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0f176568"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "466372e5-6355-40ff-96d5-d30e2ba809a1"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0f176568"
        },
        "SubnetId": {
          "Ref": "MyPrivateSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "c158d9f4-f90f-441e-a840-b8c2614a21eb"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0f176568"
        },
        "SubnetId": {
          "Ref": "MyPublicSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "e44dc007-7841-4c6b-89c8-7e8aa4e7cd26"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "InternetGatewayId": {
          "Ref": "igw52abe436"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "db43dcd7-098a-4c59-9053-37b6f6067881"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVPCPublicRouteTable"
        },
        "SubnetId": {
          "Ref": "MyPublicSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "8c13a861-3331-4131-a364-78e617f7310f"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVPCPrivateRouteTable"
        },
        "SubnetId": {
          "Ref": "MyPrivateSubnet"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "a7bf1548-c3c2-48dc-b5ba-ab9a8a52f04c"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "MyVPCPublicRouteTable"
        },
        "GatewayId": {
          "Ref": "igw52abe436"
        }
      },
      "DependsOn": [
        "gw1"
      ],
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "a3d17042-328a-4539-a34c-eff8410c6ae4"
        }
      }
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "DhcpOptionsId": {
          "Ref": "doptf477e790"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "7187a7c3-da76-4089-a20c-0347978e6184"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMyMySQLSG"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "10.0.1.0/24"
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMyMySQLSG"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "CidrIp": "10.0.1.0/24"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgMyMySQLSG"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "MyVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyVPC"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "5cf7e68b-c469-47f9-a9d2-5af1d5e7018e"
        }
      }
    },
    "RouteTo": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "MyVPCPrivateRouteTable"
        },
        "InstanceId": {
          "Ref": "MyNatInstance"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "910a54a3-6e36-405e-b745-e5b4963661b7"
        }
      }
    },
    "MyPublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "eu-west-1a",
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "10.0.1.0_eu-west-1a_Public"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "a6ab5c65-db2e-4cc0-a68b-fb3175ccf868"
        }
      }
    },
    "MyPrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "eu-west-1b",
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "10.0.2.0_eu-west-1b_Private"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "552723ec-5be6-4d15-b012-4034cf0eb619"
        }
      }
    },
    "MyVPCPrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyVPCPrivateRouteTable"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "4254f2b0-54e4-4490-a643-6016c9c75949"
        }
      }
    },
    "MyVPDDefaultRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyVPDDefaultRouteTable"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "07140196-a2ef-4d07-b7b1-e7453d82d4f0"
        }
      }
    },
    "MyVPCPublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MyVPCPublicRouteTable"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "fa4ed625-ccf3-41b6-a58b-ef15db05d47f"
        }
      }
    }
  },
  "Description": "MyVPC template",
  "Parameters": {
    "KeyName": {
      "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "Can contain only ASCII characters."
    },
    "AMIId": {
      "Description": "Name of an existing AMI",
      "Type": "String",
      "ConstraintDescription": "You should choose ami-d7b9a2b1"
    },
    "NATAMIID": {
      "Description": "Name of an existing NAT Instance AMI",
      "Type": "String",
      "ConstraintDescription": "You should choose ami-076d5d61"
    },
    "VPC_CIDR": {
      "Description": "VPC CIDR Range",
      "Type": "String",
      "ConstraintDescription": "Must be a valid CIDR range like '10.0.0.0/16'"
    },
    "Public_Subnet_CIDR": {
      "Description": "Public Subnet CIDR Range",
      "Type": "String",
      "ConstraintDescription": "Must be a valid CIDR range like '10.0.1.0/24'"
    },
    "Public_Subnet_AZ": {
      "Description": "Public Subnet AZ",
      "Type": "String",
      "ConstraintDescription": "Must be a valid Subnet AZ like 'eu-west-1a'"
    },
    "Private_Subnet_CIDR": {
      "Description": "Private Subnet CIDR Range",
      "Type": "String",
      "ConstraintDescription": "Must be a valid CIDR range like '10.0.2.0/24'"
    },
    "Private_Subnet_AZ": {
      "Description": "Public Subnet AZ",
      "Type": "String",
      "ConstraintDescription": "Must be a valid Subnet AZ like 'eu-west-1b'"
    },
    "InstanceType": {
      "Description": "EC2 instance type",
      "Type": "String",
      "Default": "t2.micro",
      "AllowedValues": [
        "t2.micro"
      ],
      "ConstraintDescription": "Must be a valid EC2 instance type"
    },
    "SSHLocation": {
      "Description": "The IP address range that can be used to SSH to the EC2 instances",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
    }
  }
}
